--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.1.5",
     "sort-by": "^0.0.2"
   },
